# aipa

./: .gitignore  README.md  __init__.py  learning_notes.md  main.py  pyproject.toml  tools.py  utils.py
agent/: __init__.py  agent.py  assistant_prompts.json  system_prompt.txt  weather_agent_prompts.json
agents/: __init__.py  agent.py  agent_context.py  assistant_agent.py  email_agent.py  email_sorter_agent.py  prompt.py  prompt_set.py  user_descriptor_agent.py  wakeup_agent.py  weather_agent.py
agents/prompts/assistant_agent/: agent_task_gen_prompt.txt  agent_task_planning_prompt.txt  agent_task_selection_prompt.txt  agent_task_step_prompt.txt  initial_wakeup_prompt.txt  snooze_wakeup_prompt.txt  system_prompt.txt
agents/prompts/email_agent/: email_sort_prompt.txt  email_summary_prompt.txt
agents/prompts/email_sorter_agent/: email_sort_prompt.txt  system_prompt.txt
agents/prompts/user_descriptor_agent/: description_summary_prompt.txt  system_prompt.txt
agents/prompts/wakeup_agent/: initial_wakeup_prompt.txt  system_prompt.txt
agents/prompts/weather_agent/: morning_report_prompt.txt  system_prompt.txt
config/: __init__.py  gmail_db.json
email_handling/: __init__.py  email_objects.py  gmail_handler.py
messages/: __init__.py  message.py
models/: __init__.py  hf_auto_model.py  model.py  ollama_model.py
notebooks/: Meteo Sandob.ipynb  Model Sandbox.ipynb
tasks/: __init__.py  task.py
user/: __init__.py  user_context.py
