[project]
name = "aipa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "geocoder>=1.38.1",
    "jupyter>=1.1.1",
    "openmeteo-requests>=1.7.4",
    "requests-cache>=1.2.1",
    "smolagents[all]>=1.22.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
